--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-material/core": "^1.3.7",
+    "axios": "^1.5.0",
     "expo": "^49.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "^0.72.3",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
